# OC_SoftDesk

./: README.md  TEST_ENDPOINTS.md  db.sqlite3  pyproject.toml
.github/: dependabot.yml
core/: settings.py  urls.py  views.py
issues/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
issues/migrations/: 0001_initial.py
projects/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_alter_contributor_role_alter_project_type.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
